[project]
name = "drow_aio"
description = "Prometheus http query client for asyncio"

authors = [
    { name = "Elephant Liu" }
]

license = "MIT"

classifiers = [
  "Programming Language :: Python :: 3",
]

# drow requires python >= 3.11
requires-python = ">=3.11"

dependencies = [
    "drow",
    "httpx",
]

readme = "README.md"

dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/xospc/drow-aio"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
